--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,4 @@ services:
     ports:
       - '3308:3306'
     volumes:
-      - "data:/var/lib/mysql"
-
-volumes:
-  data: {}
+      - ./data/mysql:/var/lib/mysql
