Force different IP subnet when creating project network
Default IP conflicted with NAS server's IP containing the images, preventing mount.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '3308:3306'
     volumes:
-      - ./data/mysql:/var/lib/mysql
+      - ./db_data/mysql:/var/lib/mysql
     networks:
       - network_1
 
@@ -32,3 +32,7 @@ services:
 networks:
   network_1:
     name: 'image_processing'
+    driver: bridge
+    ipam:
+        config:
+        - subnet: 192.168.18.1/24
