--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - '3308:3306'
     volumes:
       - ./db_data/mysql:/var/lib/mysql
+    restart: ${RESTART_POLICY} 
     networks:
       - network_1
 
@@ -35,7 +36,7 @@ services:
     working_dir: /service
     depends_on:
       - mariadb
-    # restart: always # uncomment for deployment on server
+    restart: ${RESTART_POLICY}
     networks:
       - network_1
 
